--- a/scss/_l-join-us.scss
+++ b/scss/_l-join-us.scss
@@ -25,6 +25,7 @@
       line-height: 122%;
       letter-spacing: -0.05em;
       text-transform: uppercase;
+      text-align: left;
       color: #000;
 
       @include desktop {
