--- a/scss/_l-main-screen.scss
+++ b/scss/_l-main-screen.scss
@@ -1,7 +1,6 @@
 .main-screen {
   position: relative;
   padding: 162px 0 100px;
-  background: url(../assets/paper-bg.png) center no-repeat;
 
   @include mobile {
     padding: 120px 0 200px;
